--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="#contactos" class="nav_items nav_items--cta">Contactame</a>
                 <a href="#sobremi" class="nav_items">Sobre mi</a>
                 <a href="#proyectos" class="nav_items">Proyectos</a>
+                <a href="./assets/CV Actualizado.pdf" download="CV_Victor_Martinez" class="nav_items">Curriculum</a>
             </nav>
 
             <section class="hero__container">
@@ -177,6 +178,7 @@
                 <a class="nav_items nav__items--footer" href="#contactos"> Inicio</a>
                 <a class="nav_items nav__items--footer" href="#sobremi">Sobre mi</a>
                 <a class="nav_items nav__items--footer" href="#proyectos">Proyectos</a>
+                <a class="nav_items nav__items--footer" href="./assets/CV Actualizado.pdf" download="CV_Victor_Martinez">Curriculum</a>
             </nav>
             <section id="contactos" class="footer__contact">
                 <h3 class="footer__title">Contactame</h3>
